Bug 1641585 Skip ProcessInput() calls when mStateComputedTime has not advanced r=pehrsons

and so there are no frames to processed.

This is consistent with ProduceDataForTracksBlockByBlock(), so that behavior
is consistent regardless of whether there is an AudioNodeTrack in the graph.

This saves individual ProcessInput() implementations from needing to handle
this rare case.

Differential Revision: https://phabricator.services.mozilla.com/D211690